# vimmjipda

./: .gitignore  LICENSE  README.md  VIMMJIPDA.py  VIMMJIPDA_code.py  VIMMJIPDA_interface.py  pyproject.toml  setup.cfg
VIMMJIPDA/code/: import_data.py  run.py
VIMMJIPDA/code/tracking/: associators.py  constructs.py  filters.py  initiators.py  models.py  trackers.py  utilities.py
VIMMJIPDA_code/code/: import_data.py  parameters.py  run.py
VIMMJIPDA_code/code/tracking/: associators.py  constructs.py  filters.py  models.py  trackers.py
VIMMJIPDA_testing/code/: plotting.py  run.py
VIMMJIPDA_testing/code/tracking/: initiators.py  utilities.py
config/: vimmjipda.yaml
tests/: test_vimmjipda_interface.py
vimmjipda/: README.md  paths.py  requirements.txt  vimmjipda_tracker_interface.py
vimmjipda/code/: import_data.py  parameters.py  plotting.py  run.py  setup.py
vimmjipda/code/tracking/: associators.py  constructs.py  filters.py  initiators.py  managers.py  models.py  terminators.py  trackers.py  utilities.py
vimmjipda/environment/: Dockerfile
