[project]
name = "vimmjipda"
version = "1.0.0"
description = "Simulator for maritime collision avoidance benchmarking."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Ragnar Norbye Wien", email = "ragnar.wien@ntnu.no"},
    {name = "Trym Tengesdal", email = "tengesdal1994@gmail.com"},
    {name = "Jørgen Myklebust", email = "jorgen.myklebust@ntnu.no"}
]
keywords = ["vimmjipda", "multi target tracking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20",
    "anytree",
    "matplotlib",
    "matplotlib-scalebar",
    "scipy",
    "shapely",
    "scikit-image",
    "pyyaml",
    "dacite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vimmjipda"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
test = [
    "colav-simulator",
]

[tool.uv.sources]
colav-simulator = {git = "https://github.com/NTNU-TTO/colav-simulator.git", rev = "8e726aa015413608a4f1423918cd9a5e50912d94"}
