[metadata]
name = vimmjipda
version = 0.0.1
author = Trym Tengesdal, Ragnar Wien
author_email = tengesdal1994@gmail.com
description = Simulator for maritime collision avoidance benchmarking.
url = https://github.com/NTNU-Autoship-Internal/vimmjipda
long_description = file: README.md, LICENSE
long_description_content_type= text/markdown
keywords = vimmjipda, multi target tracking
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/NTNU-Autoship-Internal/vimmjipda/issues

[options]
package_dir =
  '' = vimmjipda
packages = find:
install_requires =
    numpy>=1.20
    descartes
    anytree
    matplotlib
    matplotlib-scalebar
    scipy
    shapely
    scikit-image
    pyyaml
    dacite
    # colav-simulator
python_requires = >=3.10
test_suite = tests

[options.package_data]
vimmjipda = vimmjipda.yaml
